[tool.poetry]
name = "nonebot-plugin-lynchpined"
version = "0.1.5"
description = "A nonebot2 plugin to check Lynchpin progress."
authors = ["Nightsky <050644zf@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_lynchpined"}]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.10.2"
nonebot-plugin-apscheduler = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
